@@ -6,6 +6,7 @@ On the road for v0.4.6 (Nausicaa2)
 ===============================================================================
 
 2007-02-20  Gilles Dumortier <dgil at ieee.org>
+	* View Stops : be able to add a quote not in the matrix
 	* Barchart plugin : a request per letter - otherwise, some symbols are
 	  missing (like CSCO)
 	* Check software release for upgrading (SF bug 1647466)
